// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Tooltip Interactive Tooltip 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  background-color: #1B214F;
  border: 0.0625rem solid rgba(84,94,255,0);
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-3 .tippy-content {
  background-color: #1B214F;
  padding: 1rem;
  border-radius: 0.25rem;
}

.emotion-3 .tippy-arrow::before {
  color: #1B214F;
}

.emotion-4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-5:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-5:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-8 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1B214F;
  background-color: #1de9b6;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-8:focus-visible:not(:disabled) {
  background-color: #00C6A2;
}

.emotion-8:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-8:hover:not(:disabled) {
  background-color: #00C6A2;
}

.emotion-8:active:not(:disabled) {
  background-color: #0C7D61;
}

.emotion-10 {
  background: #1B214F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-11 {
  background-color: #ffffff;
  border: 0.0625rem solid #E7E8FF;
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-11 .tippy-content {
  background-color: #ffffff;
  padding: 1rem;
  border-radius: 0.25rem;
}

.emotion-11 .tippy-arrow::before {
  color: #ffffff;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "padding": "48px",
            }
          }
        >
          <div
            arrow={false}
            className="emotion-3"
            delay={
              Array [
                500,
                500,
              ]
            }
            interactive={true}
            placement="right"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <span>
                    Hover here
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div>
            <div
              style={
                Object {
                  "alignItems": "center",
                  "background": "#434666",
                  "border": "#DCDFFF",
                  "borderRadius": "4px",
                  "color": "white",
                  "display": "flex",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "padding": "8px",
                  "width": "240px",
                }
              }
            >
              <div>
                This container is custom content
              </div>
              <div
                className="emotion-4"
              >
                <button
                  className="emotion-8"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-6"
                  >
                    <span>
                      Hello there mate
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-10"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "padding": "48px",
            }
          }
        >
          <div
            arrow={false}
            className="emotion-11"
            delay={
              Array [
                500,
                500,
              ]
            }
            interactive={true}
            placement="right"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-8"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <span>
                    Hover here
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div>
            <div
              style={
                Object {
                  "alignItems": "center",
                  "background": "#DCDFFF",
                  "border": "#DCDFFF",
                  "borderRadius": "4px",
                  "color": "black",
                  "display": "flex",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "padding": "8px",
                  "width": "240px",
                }
              }
            >
              <div>
                This container is custom content
              </div>
              <div
                className="emotion-4"
              >
                <button
                  className="emotion-5"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-6"
                  >
                    <span>
                      Hello there mate
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Tooltip Playground 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  background-color: #1B214F;
  border: 0.0625rem solid rgba(84,94,255,0);
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-3 .tippy-content {
  background-color: #1B214F;
  max-width: 16rem;
  padding: 0.5rem;
  border-radius: 0.25rem;
  color: #ffffff;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  text-align: start;
  white-space: pre-wrap;
  word-break: break-word;
}

.emotion-3 .tippy-arrow::before {
  color: #1B214F;
}

.emotion-4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-5:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-5:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-7 {
  background-color: #1B214F;
  border: 0.0625rem solid rgba(84,94,255,0);
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-7 .tippy-content {
  background-color: #1B214F;
  padding: 1rem;
  border-radius: 0.25rem;
}

.emotion-7 .tippy-arrow::before {
  color: #1B214F;
}

.emotion-12 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1B214F;
  background-color: #1de9b6;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-12:focus-visible:not(:disabled) {
  background-color: #00C6A2;
}

.emotion-12:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-12:hover:not(:disabled) {
  background-color: #00C6A2;
}

.emotion-12:active:not(:disabled) {
  background-color: #0C7D61;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "gap": "128px",
              "height": "200px",
              "justifyContent": "center",
              "padding": "16px",
              "width": "600px",
            }
          }
        >
          <div
            arrow={true}
            className="emotion-3"
            delay={
              Array [
                100,
                100,
              ]
            }
            interactive={false}
            placement="right"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <span>
                    Text
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div>
            This is a Tooltip
          </div>
          <div
            style={
              Object {
                "padding": "48px",
              }
            }
          >
            <div
              arrow={false}
              className="emotion-7"
              delay={
                Array [
                  100,
                  100,
                ]
              }
              interactive={true}
              placement="right"
            >
              <div
                className="emotion-4"
              >
                <button
                  className="emotion-5"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-6"
                  >
                    <span>
                      Interactive
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div>
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "background": "#434666",
                    "border": "#DCDFFF",
                    "borderRadius": "4px",
                    "color": "white",
                    "display": "flex",
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "padding": "8px",
                    "width": "240px",
                  }
                }
              >
                <div>
                  This container is custom content
                </div>
                <div
                  className="emotion-4"
                >
                  <button
                    className="emotion-12"
                    data-testid="button"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="emotion-6"
                    >
                      <span>
                        Hello there mate
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Tooltip Text Tooltip 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  background-color: #1B214F;
  border: 0.0625rem solid rgba(84,94,255,0);
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-3 .tippy-content {
  background-color: #1B214F;
  max-width: 16rem;
  padding: 0.5rem;
  border-radius: 0.25rem;
  color: #ffffff;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  text-align: start;
  white-space: pre-wrap;
  word-break: break-word;
}

.emotion-3 .tippy-arrow::before {
  color: #1B214F;
}

.emotion-4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-5:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-5:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-7 {
  background: #1B214F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-8 {
  background-color: #ffffff;
  border: 0.0625rem solid #E7E8FF;
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-8 .tippy-content {
  background-color: #ffffff;
  max-width: 16rem;
  padding: 0.5rem;
  border-radius: 0.25rem;
  color: #1B214F;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  text-align: start;
  white-space: pre-wrap;
  word-break: break-word;
}

.emotion-8 .tippy-arrow::before {
  color: #ffffff;
}

.emotion-10 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1B214F;
  background-color: #1de9b6;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-10:focus-visible:not(:disabled) {
  background-color: #00C6A2;
}

.emotion-10:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-10:hover:not(:disabled) {
  background-color: #00C6A2;
}

.emotion-10:active:not(:disabled) {
  background-color: #0C7D61;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "padding": "16px",
            }
          }
        >
          <div
            arrow={true}
            className="emotion-3"
            delay={
              Array [
                500,
                500,
              ]
            }
            interactive={false}
            placement="right"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <span>
                    Hover here
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div>
            This is a Tooltip
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-7"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "padding": "16px",
            }
          }
        >
          <div
            arrow={true}
            className="emotion-8"
            delay={
              Array [
                500,
                500,
              ]
            }
            interactive={false}
            placement="right"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-10"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <span>
                    Hover here
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div>
            This is a Tooltip
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Tooltip Tooltip Placement 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  background-color: #1B214F;
  border: 0.0625rem solid rgba(84,94,255,0);
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-3 .tippy-content {
  background-color: #1B214F;
  max-width: 16rem;
  padding: 0.5rem;
  border-radius: 0.25rem;
  color: #ffffff;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  text-align: start;
  white-space: pre-wrap;
  word-break: break-word;
}

.emotion-3 .tippy-arrow::before {
  color: #1B214F;
}

.emotion-4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-5:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-5:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "height": "100px",
              "justifyContent": "center",
              "padding": "16px",
              "width": "300px",
            }
          }
        >
          <div
            arrow={true}
            className="emotion-3"
            delay={
              Array [
                500,
                500,
              ]
            }
            interactive={false}
            placement="right"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <span>
                    Hover here
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div>
            This is a Tooltip
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
